2012-04-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct msys-dos2unix doc and licence package reference anomalies.

	* msys/msys-dos2unix.xml: Update and republish.
	(cygutils-dos2unix-1.3.4-4-msys-1.0.13-doc.tar.lzma): Declare it as a
	virtual package; add 'requires' specification, linking it to...
	(cygutils-1.3.4-4-msys-1.0.13-doc.tar): ...this.
	(cygutils-dos2unix-1.3.4-4-msys-1.0.13-lic.tar.lzma): Likewise...
	(cygutils-1.3.4-4-msys-1.0.13-lic.tar): ...linking to this.

	* msys/issue.log: Updated accordingly.

2012-04-09  Erwin Waterlander  <waterlan@xs4all.nl>

	Replace msys-cygutils-dos2unix with msys-dos2unix.

	* msys/msys-cygutils.xml: Removed msys-cygutils-dos2unix
	package element. Modified msys-cygutils description to refer
	to the new msys-dos2unix package.
	* msys/msys-dos2unix.xml: New file.
	* msys/msys-package-list.xml: Added msys-dos2unix.xml.
	* msys/msys-base.xml: Replaced msys-coreutils-dos2unix-*-bin
	with msys-dos2unix-*-bin.
	* msys/issue.log: Updated accordingly.

2012-04-09  Erwin Waterlander  <waterlan@xs4all.nl>

	Replace mingw32-cygutils-dos2unix with mingw32-dos2unix.
	Remove (unnecessary) mingw32-cygutils.

	* mingw32/mingw32-cygutils.xml: Removed.
	* mingw32/mingw32-dos2unix.xml: New file.
	* mingw32/mingw32-package-list.xml: Added mingw32-dos2unix.xml;
	removed mingw32-cygutils.xml.
	* mingw32/mingw32-mingw-utils.xml: Updated description text
	to refer to new mingw32-dos2unix package.
	* mingw32/issue.log: Updated accordingly.

2012-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add Lua packages as MinGW extensions.

	* mingw32/mingw32-lua.xml: New file.
	* mingw32/mingw32-package-list.xml (mingw32-lua): Add reference.
	* mingw32/issue.log: Updated accordingly.

2012-02-10  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.
	Split the gdb package into gdb and gdb-python.

	* mingw32/mingw32-gdb.xml: Update to 7.2-2.
	* mingw32/issue.log: Updated accordingly.
