@@ -46,7 +46,7 @@
   abf16c6e3575585f92c4a88b7be2c1bf6f7e5f26 2012021600 mingw32-lua.xml
   aaa310c7d830e7e9eef6738273630dda8e70d674 2011101100 mingw32-make.xml
   d72826fa6526c7253dc7d6c0a5be4846df11a995 2011110600 mingw32-mgwport.xml
-  a80ddc9b75352027ec1a8e4f43838133c88fb1d1 2011110600 mingw32-mingw-get.xml
+  a8c6b0410c13f938887cc1aaad26abb2aa46808a 2012041600 mingw32-mingw-get.xml
   143dee9e2cd59154f477e93cf59e08bc904d67f5 2012040500 mingw32-mingw-utils.xml
   397021010754b50cdbbe5d5003b1f6217158ec8e 2010083100 mingw32-mpc.xml
   c35e6513fa814743400729714413bd749ff148ef 2010083100 mingw32-mpfr.xml
